--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@
     height: 100vh;
     background-color: #f8f7f5;
     background-color:  #191F15;
+    background-color: #111410;
 }
 .leftmenu{
     width: 20%;
