--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,7 @@
     /* z-index: -1; */
     /* background-color: #eee; */
     background-color:  #191F15;
+    background-color: #111410;
 }
 .cards{
     display: flex;
