--- a/src/main.css
+++ b/src/main.css
@@ -26,19 +26,17 @@ body {
        
   }
   .center_div{
-    width: 80%;
-   
-    height: 70%;
+    width: 100%;
+    height: 100%;
     text-align: center;
-    
-       border: 2px solid white ;
-       border-radius: 20px;
-       background-color: aliceblue;
-       display: block;
-       overflow-y: auto;
-       box-shadow: 5px 5px 15px -5px rgba(10, 10, 10, 0.904);
-       position: relative;
-       background-color: #eee;
+    /* border: 2px solid #fff; */
+    border-radius: 20px;
+    background-color: #f0f8ff;
+    display: block;
+    overflow-y: auto;
+    box-shadow: 5px 5px 15px -5px rgb(10 10 10 / 90%);
+    position: relative;
+    background-color: transparent;
        
   }
   .center_div::-webkit-scrollbar {
@@ -74,6 +72,7 @@ body {
     font-weight: 500;
     border-bottom: 2px solid purple;
     outline: none;
+    color: white;
   }
   .alag input:placeholder-shown{
       font-size: 17px;
