--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@
     display: flex;
     height: 100vh;
     background-color: #f8f7f5;
-    background-color:  #191F15;
+    /* background-color:  #191F15; */
     background-color: #111410;
 }
 .leftmenu{
@@ -56,7 +56,7 @@
     font-family: 'Baloo Bhai 2', cursive;
     /* z-index: -1; */
     /* background-color: #eee; */
-    background-color:  #191F15;
+    /* background-color:  #191F15; */
     background-color: #111410;
 }
 .cards{
