--- a/src/Watchlist/main.css
+++ b/src/Watchlist/main.css
@@ -27,15 +27,18 @@ body {
   }
   .center_div{
     width: 100%;
+   
     height: 100%;
     text-align: center;
-    border-radius: 20px;
-    background-color: #f0f8ff;
-    display: block;
-    overflow-y: auto;
-    box-shadow: 5px 5px 15px -5px rgb(10 10 10 / 90%);
-    position: relative;
-    background-color: transparent;
+    
+       /* border: 2px solid white ; */
+       border-radius: 20px;
+       /* background-color: aliceblue; */
+       display: block;
+       overflow-y: auto;
+       box-shadow: 5px 5px 15px -5px rgba(10, 10, 10, 0.904);
+       position: relative;
+       background-color: transparent;
        
   }
   .center_div::-webkit-scrollbar {
@@ -58,6 +61,7 @@ body {
     position: sticky;
     top: 0%;
     /* background-color: #eee; */
+    /* color: #d3d31e; */
     
   }
   .alag input{
@@ -72,6 +76,7 @@ body {
     border-bottom: 2px solid purple;
     outline: none;
     color: white;
+    color: #8566aa;
   }
   .alag input:placeholder-shown{
       font-size: 17px;
