--- a/src/index.css
+++ b/src/index.css
@@ -6,71 +6,99 @@
     padding: 0;
     box-sizing: border-box;
 }
-.tittle{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* margin: 10px 0px; */
-    /* margin-top: 15px; */
-    background: #8383c3;
-    padding: 10px 0px;
-    /* border-radius: 0px; */
-    box-shadow: 5px 10px 5px -5px rgb(0 0 0 / 30%);
-    position: sticky;
-    top: 0%;
-    z-index: 10;
-    font-family: 'Zen Loop', cursive;
-    /* margin-bottom: 2rem; */
+html {
+    scroll-behavior: smooth;
 }
+
+.right{
+    display: flex;
+    flex-direction: row;
+    background-color:  #191F15;
+    color: white;
+    justify-content: center;
+    z-index: -100;
+    /* background-color: #032541; */
+    align-items: center;
+    background-color: #0a327d;
+    /* border-bottom: 2px solid black; */
+    height: 3.5rem;
+    background-color: #111410;
+    background-color:  #181818;
+    
+}
+.dark{
+    position: absolute;
+    right: 25px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 
 .tittle1{
     display: flex;
     align-items: center;
     justify-content: center;
-    /* margin: 10px 0px; */
-    /* margin-top: 15px; */
-    /* background: white;
     padding: 10px 0px;
-    
-    box-shadow: -5px -10px 5px -5px rgb(0 0 0 / 30%);
-    z-index: 11;
-    margin-top: 1px; */
-    padding: 10px 0px;
+    /* background-color: #0a327d; */
+    color: white;
+    background-color: #032541;
+    font-family: 'Baloo Bhai 2', cursive;
+}
+.tittle{
+    color: #d3d31e;
+    /* color: yellow; */
+    font-size: 1rem;
+    font-family: 'Baloo Bhai 2', cursive;
 }
 .WholeSection{
     display: flex;
     height: 100vh;
     background-color: #f8f7f5;
-    /* background-color:  #191F15; */
+    
+    background-color: #0a327d;
+    /* background-color: #0280aa; */
     background-color: #111410;
+    background-color:  #181818;
 }
 .leftmenu{
     width: 20%;
-/*     
-    border-right: 2px solid black; */
-    background-color: white;
-    border-radius: 2px;
+
+    border-radius: 20px;
     position: relative;
     height: 100%;
-    background-color: #f8f7f5;
-    font-family: 'Baloo Bhai 2', cursive;
-    /* z-index: -1; */
-    /* background-color: #eee; */
-    /* background-color:  #191F15; */
-    background-color: #111410;
+   
+    font-family: 'Baloo Bhai 2', cursive;   
 }
 .cards{
     display: flex;
     width: 80%;
     flex-wrap: wrap;
+    height: 100%;
     justify-content: space-evenly;
-    
+    position: relative;
     overflow-y: auto;
+    animation-name: harsh1;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+}
+@keyframes harsh1 {
+    from{
+        width: 0%;
+        height: 0%;
+    }
+    to{
+     width: 80%;
+     height: 100%;
+    }
 }
 .cards::-webkit-scrollbar{
     width: 0;
     display: none;
 }
+
+   
+
 
 .container{
     display: flex;
@@ -78,22 +106,30 @@
     width: 12rem;
     height: 20rem;
     border-radius: 15px;
-     /* border: 1px solid white;
-     box-shadow: 10px 10px 5px -5px rgba(0,0,0,0.3); */
      margin: 2.5rem 3.2rem;
-     /* margin-top: 5rem; */
      transition: all 0.5s ease-in 0s;
      background-color: #8CC827;
-     /* border: 1px solid #8CC827; */
-     /* background-color: #f8f7f5; */
      background-color: #c50923;
-   
+     position: relative;
+    animation-name: harsh3;
+    animation-duration: 0.5s;
+    animation-iteration-count: 1;
+    box-shadow: 10px 10px 10px -10px rgb(0 0 1);
+}
+@keyframes harsh3 {
+    from{
+        width: 0%;
+      
+        margin: 2.5rem 8rem;
+    }
+    to{
+        margin: 2.5rem 3.2rem;
+     width: 12rem;
+  
+    }
 }
 .container:hover{
     transform: scale(1.1,1.1);
-    /* background-color: #2d313a;
-    color: white; */
-    /* box-shadow: 10px 10px 5px -5px rgb(250, 249, 249); */
 }
 .images{
    width: 100%;
@@ -162,7 +198,23 @@ h4{
     padding: 0px .3rem;
     font-size: 1.5rem;
     color: white;
+    color:#8566aa;
+    font-weight: 900;
+    letter-spacing: 0.5px;
 }
+.filter12{
+    border-bottom: 3px solid darkmagenta;
+    /* display: block; */
+    margin: 1.2rem 4.5rem;
+    padding: 0px .3rem;
+    font-size: 1.5rem;
+    color: white;
+    color:black;
+    font-weight: 900;
+    letter-spacing: 0.5px;
+}
+
+
 
 .fav{
     color: #EA6025;
@@ -181,22 +233,12 @@ h4{
 }
 
 
-/* .myfav a{
-    text-decoration: none;
-    text-align: center;
-    padding: 5px 5px;
-    border: 1px solid white;
-    border-radius: 30px;
-    margin: 10px 75px;
-    font-size: 18px;
-    font-weight: 500;
-    box-shadow: 5px 5px 5px -5px;
-} */
 .selected{
     color: black;
     
     border-bottom: 1px solid blue;
     color: white;
+    color:#8566aa;
 
     
 }
@@ -224,4 +266,32 @@ h4{
     width: 70%;
     /* text-align: center;
 } */
+}
+
+@media only screen and (max-width: 600px){
+    .tittle{
+        color: #d3d31e;
+        font-size: 0.5rem;
+    }
+    .tittle1{
+        font-size: 0.5rem;
+    }
+    #dark{
+        display: none;
+    }
+    .watchs{
+        font-size: 1rem;
+    }
+    .alag input{
+        font-size: 0.5rem;
+    }
+    .todo-style{
+        font-size: 0.5rem;
+    }
+    .fav{
+        font-size: 0.8rem;
+    }
+    .fa-user-circle{
+        margin-top: 5px;
+    }
 }
