--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ html {
     height: 3.5rem;
     background-color: #111410;
     background-color:  #181818;
+    background-color: #ffffff;
     
 }
 .dark{
@@ -32,6 +33,7 @@ html {
     display: flex;
     flex-direction: row;
     align-items: center;
+    color: black;
 }
 
 
@@ -60,6 +62,7 @@ html {
     /* background-color: #0280aa; */
     background-color: #111410;
     background-color:  #181818;
+    background-color: #ffffff;
 }
 .leftmenu{
     width: 20%;
@@ -176,8 +179,21 @@ h4{
     cursor: pointer;
     color: black;
 }
+.buttons button{
+    border: none;
+    text-decoration: none;
+    margin-top: 5px;
+    padding: 1px 10px;
+    background-color: transparent;
+    text-align: center;
+    cursor: pointer;
+    color: black;
+}
 .buttons a:hover{
     border-bottom: 1px solid rgba(0,0,0,0.3);
+    color: slateblue;
+}
+.buttons button:hover{
     color: slateblue;
 }
 
@@ -267,6 +283,8 @@ h4{
     /* text-align: center;
 } */
 }
+
+
 
 @media only screen and (max-width: 600px){
     .tittle{
